--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" href="/favicon.ico" />
-  <title>React.js Boilerplate</title>
+  <title>WebDev</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 
   <!-- The app hooks into this div -->
   <div id="app"></div>
-  <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this file. Don't add any assets here! (Check out webpack.dev.babel.js and webpack.prod.babel.js if you want to know more) -->
+  <!-- HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css, semantic.css files, etc) with the correct HTML tags, which is why they are missing in this file. DO NOT assets here! (Check out webpack.dev.babel.js and webpack.prod.babel.js if you want to know more) -->
 </body>
 
 </html>
